<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 设置 SeekBar 在右侧并居中 -->
    <com.hive.hivefx.view.VerticalSeekbar
        android:id="@+id/verticalSeekBar"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="center|end"
        android:max="120"
        android:maxHeight="5dp"
        android:progress="50"
        android:progressDrawable="@drawable/video_seek_bar_bg"
        android:thumb="@drawable/video_seek_bar_thumb" />

    <!-- 四个方块按钮 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- 上方正中间一个按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_Snow"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@drawable/button_border"
                android:clickable="true"
                android:enabled="true"
                android:focusable="auto"
                android:text="@string/Top"
                android:textColor="#ffffff"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <!-- 下方的三个按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_SmallSnowFore"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/SmallSnowFore"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/btn_SmallSnowBack"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/SmallSnowBack"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_BigSnowFore"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/BigSnowFore"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/btn_BigSnowBack"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/BigSnowBack"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_SmallRainFore"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/SmallRainFore"
                        android:textColor="#ffffff"
                        tools:ignore="NestedWeights,VisualLintButtonSize" />

                    <Button
                        android:id="@+id/btn_SmallRainBack"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/SmallRainBack"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_BigRainFore"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/BigRainFore"
                        android:textColor="#ffffff"
                        tools:ignore="NestedWeights,VisualLintButtonSize" />

                    <Button
                        android:id="@+id/btn_BigRainBack"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="false"
                        android:text="@string/BigRainBack"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <Button
                android:id="@+id/btn_bottom_center_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/Cloud"
                android:textColor="#ffffff"
                tools:ignore="VisualLintButtonSize"
                android:clickable="false"
                android:focusable="false"
                android:enabled="false"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
